@@ -31,7 +31,7 @@ public interface KijiTableFactory {
   /**
    * Opens a KijiTable by name.
    *
-   * <p>Clients must take care to close the KijiTable instance when finished.</p>
+   * <p>Clients must take care to release the KijiTable instance when finished.</p>
    *
    * @param tableName Name of the table to open.
    * @return the opened Kiji table.
