@@ -256,9 +256,8 @@ public final class KijiTablePool implements Closeable {
   }
 
   /**
-   * Gets a previously opened table from the pool, or open a new connection.
-   * Clients should not call close() on the returned table. Instead, they should release the
-   * table back to the pool when finished by passing it in call to release().
+   * Gets a previously opened table from the pool, or open a new connection. Clients should release
+   * the table back to the pool when finished by passing it in call to release().
    *
    * @param name The name of the Kiji table.
    * @return An opened Kiji table.
@@ -297,7 +296,7 @@ public final class KijiTablePool implements Closeable {
   }
 
   /**
-   * Closes the tables in the pool.
+   * Releases the tables in the pool.
    *
    * @throws IOException If there is an error closing the pool.
    */
@@ -470,7 +469,6 @@ public final class KijiTablePool implements Closeable {
 
     /**
      * Constructor.
-     *
      * @param table The table connection to wrap.
      * @param pool The pool that this Connection is associated with.
      */
@@ -490,13 +488,6 @@ public final class KijiTablePool implements Closeable {
     }
 
     // Unwrapped methods to manage the lifecycle of KijiTables obtained from a KijiTablePool.
-
-    /** {@inheritDoc} */
-    @Override
-    @Deprecated
-    public void close() throws IOException {
-      throw new UnsupportedOperationException("Cannot close KijiTable managed by KijiTablePool.");
-    }
 
     /**
      * Allows clients to express interest in retaining KijiTables that are retrieved from the
